# file-converter

./: README.md  config.py  manage.py  pyproject.toml
file_converter/: adapters.py  commands.py  constants.py  converters.py  exceptions.py  managers.py  parsers.py  queries.py  savers.py
file_converter/adapters/: atom_adapter.py  base_adapter.py  json_adapter.py  rss_adapter.py
file_converter/commands/: base_command.py  converter_command.py
file_converter/converters/: atom_converter.py  base_converter.py  json_converter.py  rss_converter.py
file_converter/helpers/: data_getter.py  registrator.py
file_converter/managers/: adapter_manager.py  adapters_manager.py  commands_manager.py  converter_manager.py  converters_manager.py  parser_manager.py  parsers_manager.py  queries_manager.py  query_manager.py  recievers_manager.py  saver_manager.py  savers_manager.py
file_converter/parsers/: atom_parser.py  base_parser.py  json_parser.py  rss_parser.py  xml_parser.py
file_converter/queries/: atom_query.py  base_query.py  json_query.py  rss_query.py
file_converter/recievers/: base_reciever.py  file_reciever.py  stream_reciever.py  url_reciever.py
file_converter/savers/: base_saver.py  file_saver.py
scripts/: converter_file.sh
tests/: conftest.py  test_adapters.py  test_converter_command.py  test_converters.py  test_input.py  test_parsers.py  test_queries.py  test_recievers.py
tests/clients/: fake_client.py
tests/fixtures/: from_atom_to_atom.atom  from_atom_to_json.json  from_atom_to_rss.rss  from_json_to_atom.atom  from_json_to_json.json  test.atom  (+9 more)
(+2 files in other folders)
