[tool.poetry]
name = "file-converter"
version = "0.1.0"
description = ""
authors = ["Anastasia Petrova <aanastasia.petrovaa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
requests = "^2.31.0"
python-magic-bin = "^0.4.14"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
